split code by targets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "haxe.displayConfigurations": [
-        ["build.hxml"],
-        ["console.hxml"],
+        ["android.hxml"],
+        ["web.hxml"],
+        ["ios.hxml"],
+        ["console.hxml"]
     ]
 }
